testData/inspections/suppression/fix/firstImportStatement-after-highlighting.go
package main
//noinspection GoUnresolvedReference
import "package1"
import "<error descr="Cannot resolve file 'package2'">package2</error>"

func test() {
}